config/network-policy-standard/authorino-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuadrant-authorino-operator
  namespace: kuadrant-system
spec:
  podSelector:
    matchLabels:
      control-plane: authorino-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 8080
