config/network-policy-standard/authorino.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuadrant-authorino
  namespace: kuadrant-system
spec:
  podSelector:
    matchLabels:
      authorino-resource: authorino
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 50051
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 5001
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8083
