config/network-policy-standard/console-plugin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuadrant-console-plugin
  namespace: kuadrant-system
spec:
  podSelector:
    matchLabels:
      app: kuadrant-console-plugin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-console
      ports:
        - protocol: TCP
          port: 9443
