config/network-policy-standard/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: kuadrant-system
spec:
  podSelector: {}
  policyTypes:
